--- a/blogs/templates/blogs/homepage.html
+++ b/blogs/templates/blogs/homepage.html
@@ -1,162 +1,23 @@
-<!DOCTYPE html>
-{% load staticfiles %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Corgi</title>
-    <link rel="icon" href="{% static 'img/favicon.ico' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <script src="{% static 'js/script.js' %}"></script>
-</head>
-<body>
-<header>
+{% extends 'blogs/base.html' %}
+{% block content %}
+<div class="block-blog">
+    <h2 class="sub-title">Our Blog</h2>
     <div class="wrap">
-        <div class="logo-header">
-            <a href="homepage.html"><img src="../../static/img/logo-2.png" alt="Logo"></a>
-        </div>
-        <div class="header-menu">
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
+        {% for post in posts %}
+        <div class="blog-item">
+            <div class="left-group">
+                <a href="{% url 'post_detail' pk=post.pk %}">
+                    <span class="thumb-blog"><img src="../../static/img/corgi-6.jpg" alt="blog"></span>
+                    <span class="blog-title">{{post.title}}</span>
+                </a>
             </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Welsh Corgi</a>
-                    <ul>
-                        <li><a href="#">Cardigan</a></li>
-                        <li><a href="#">Pembroke</a></li>
-                    </ul>
-                </li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="#">History</a></li>
-                <li><a href="#">Contact</a></li>
-                <li>
-                    <a href="#">Войти</a>
-                    <div class="login">
-                        <form action="">
-                            <div class="log">
-                                <div class="email">
-                                    <input type="email" id="email-log" placeholder="Введите Email">
-                                </div>
-                                <div class="password">
-                                    <input type="password" id="password-log" placeholder="Введите Пароль">
-                                </div>
-                            </div>
-                            <div class="log-in">
-                                <button type="submit" id="btn-login">Войти</button>
-                            </div>
-                            <div class="register">
-                                <a href="register_page.html#">Зарегестрироваться</a>
-                            </div>
-                        </form>
-                    </div>
-                </li>
-            </ul>
+            <div class="right-group">
+                <span class="blog-date">{{ post.published_date }}</span>
+                <p>{{post.text}}</p>
+            </div>
         </div>
+        {% endfor %}
     </div>
-    <div class="bg-image"></div>
-    <h1 class="title">Corgi Love <span>Lorem ipsum dolor.</span></h1>
-    <a href="#anchor-title" class="anchor">Anchor</a>
-</header>
-<main>
-    <div class="wrap">
-        <div class="block-description" id="anchor-title">
-            <h2 class="sub-title">Welsh Corgi</h2>
-            <p>Вельш-корги — это небольшая собака ростом около тридцати сантиметров и массой тела до четырнадцати килограммов. Существуют два основных вида вельш-корги: пемброк и кардиган, которые довольно серьёзно различаются между собой. Так, например, пемброк немного меньше, также у них совершенно разная форма головы.</p>
-        </div>
-    </div>
-    <div class="block-content">
-        <h2 class="sub-title">Info Corgi</h2>
-        <div class="wrap">
-            <div class="box">
-                <div class="image"><a href="#"></a></div>
-                <div class="description">
-                    <p><span>Вельш-корги-кардиган</span> уже много веков известен как рабочая собака Южного Уэльса. Он неприхотлив, очень любит детей, не знает Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate dolorem enim expedita, explicabo fuga fugit labore laboriosam magnam nesciunt nulla, praesentium quia quidem quis recusandae repellat sint vitae voluptatibus voluptatum!</p>
-                </div>
-            </div>
-            <div class="box">
-                <div class="image"><a href="#"></a></div>
-                <div class="description">
-                    <p><span>Вельш-корги-пемброк</span> идеальная городская собака, для большой и дружной семьи, где есть дети, возможно, другие животные, где Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad alias autem commodi consequatur cumque deleniti distinctio dolore fugiat fugit laborum magnam nemo nostrum optio quaerat quam, quas sequi sint!</p>
-                </div>
-            </div>
-            <div class="box">
-                <div class="image"><a href="#"></a></div>
-                <div class="description">
-                    <p><span>Вельш-корги</span>отличает огромное жизнелюбие, живость, доброжелательность. Корги — любящие и преданные, трепетно любят семью Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus atque, consectetur eligendi excepturi facilis iusto laudantium maxime minus natus nobis nostrum perspiciatis praesentium, quia quisquam, sed totam velit voluptates!</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="block-blog">
-        <h2 class="sub-title">Our Blog</h2>
-        <div class="wrap">
-            {% for post in posts %}
-            <div class="blog-item">
-                <div class="left-group">
-                    <a href="inner_blog.html">
-                        <span class="thumb-blog"><img src="../../static/img/corgi-6.jpg" alt="blog"></span>
-                        <span class="blog-title">{{post.title}}</span>
-                    </a>
-                </div>
-                <div class="right-group">
-                    <span class="blog-date">{{ post.published_date }}</span>
-                    <p>{{post.text}}</p>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-        <a href="blog.html" class="btn-blog" target="_blank">Перейти на блоги</a>
-    </div>
-    <div class="block-form" id="form">
-        <h2 class="sub-title">subscription</h2>
-        <div class="wrap">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</br> Asperiores aspernatur consectetur ea ex, hic id illo iure</p>
-            <div class="subscription-form">
-                <form action="">
-                    <div class="name">
-                        <label for="name-sb">First name</label>
-                        <input type="text" id="name-sb" name="text" value="">
-                    </div>
-                    <div class="surname">
-                        <label for="surname-sb">Last name</label>
-                        <input type="text" id="surname-sb">
-                    </div>
-                    <div class="email">
-                        <label for="email-sb">Email</label>
-                        <input type="email" id="email-sb">
-                    </div>
-                    <div class="submit">
-                        <button class="btn"><span>submit</span></button>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div id="modalwindow">
-            <div id="description">
-                <h3 class="sub-title">Спасибо за подписку</h3>
-                <button id="btn-close">Закрыть</button>
-            </div>
-        </div>
-    </div>
-</main>
-<footer>
-    <div class="wrap">
-        <div class="block-info">
-            <div class="logo-footer">
-                <a href="index.html"><img src="../../static/img/logo.png" alt="logo-footer"></a>
-            </div>
-            <div class="contact">
-                <a href="mailto:corgilove@test.ua">Email: corgilove@test.ua</a>
-                <a href="tel:+38065234542">Phone: +38 (065) 000 0000</a>
-            </div>
-        </div>
-        <div class="copyright">
-            <span>© corgi-love</span>
-        </div>
-    </div>
-</footer>
-</body>
-</html>
+    <a href="blog.html" class="btn-blog" target="_blank">Перейти на блоги</a>
+</div>
+{% endblock content %}
