--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -13,7 +13,7 @@
 <header>
     <div class="wrap">
         <div class="logo-header">
-            <a href="homepage.html"><img src="../../static/img/logo-2.png" alt="Logo"></a>
+            <a href="homepage.html"><img src="../../../static/img/logo-2.png" alt="Logo"></a>
         </div>
         <div class="header-menu">
             <div class="hamburger">
@@ -68,7 +68,7 @@
     <div class="wrap">
         <div class="block-info">
             <div class="logo-footer">
-                <a href="index.html"><img src="../../static/img/logo.png" alt="logo-footer"></a>
+                <a href="index.html"><img src="../../../static/img/logo.png" alt="logo-footer"></a>
             </div>
             <div class="contact">
                 <a href="mailto:corgilove@test.ua">Email: corgilove@test.ua</a>
