--- a/blogs/templates/blogs/homepage.html
+++ b/blogs/templates/blogs/homepage.html
@@ -12,8 +12,12 @@
                 </a>
             </div>
             <div class="right-group">
+                {% if post.published_date %}
                 <span class="blog-date">{{ post.published_date }}</span>
+                {% endif %}
+                <span class="autho">{{ post.author }}</span>
                 <p>{{post.text}}</p>
+                <a href="{% url 'post_edit' pk=post.pk %}">Редактировать</a>
             </div>
         </div>
         {% endfor %}
