--- a/blogs/templates/blogs/blog_edit.html
+++ b/blogs/templates/blogs/blog_edit.html
@@ -1,7 +1,7 @@
 {% extends 'blogs/base.html' %}
 {% block content %}
 <div class="wrap">
-    <form action="#" method="post">
+    <form action="#" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Сохранить</button>
