--- a/blogs/templates/blogs/homepage.html
+++ b/blogs/templates/blogs/homepage.html
@@ -7,17 +7,21 @@
         <div class="blog-item">
             <div class="left-group">
                 <a href="{% url 'post_detail' pk=post.pk %}">
-                    <span class="thumb-blog"><img src="../../static/img/corgi-6.jpg" alt="blog"></span>
+                    <span class="thumb-blog"><img src="{{ post.image.url }}" alt="{{ post.title }}"></span>
                     <span class="blog-title">{{post.title}}</span>
+                    <span>{{ post.comments.count }}</span>
                 </a>
             </div>
             <div class="right-group">
                 {% if post.published_date %}
                 <span class="blog-date">{{ post.published_date }}</span>
                 {% endif %}
-                <span class="autho">{{ post.author }}</span>
+                <span class="author">{{ post.author }}</span>
                 <p>{{post.text}}</p>
+            {% if request.user == post.author %}
                 <a href="{% url 'post_edit' pk=post.pk %}">Редактировать</a>
+                <a href="{% url 'post_delete' pk=post.pk %}">Delete</a>
+            {% endif %}
             </div>
         </div>
         {% endfor %}
