--- a/blogs/templates/blogs/inner_blog.html
+++ b/blogs/templates/blogs/inner_blog.html
@@ -3,7 +3,7 @@
   <div class="inner-blog">
     <div class="wrap">
       <div class="image-blog">
-        <img src="../../static/img/corgi-3.jpg" alt="">
+        <img src="{{ post.image.url }}" alt="{{ post.title }}">
       </div>
       <div class="blog-content">
         <h2 class="sub-title">{{ post.title }}</h2>
@@ -14,6 +14,7 @@
       </div>
       <div class="block-comments">
         {% for comment in comments %}
+            <div class="author"> {{ comment.author }}</div>
         <div class="comment">
           {{ comment.body }}
         </div>
