--- a/blogs/templates/blogs/register_page.html
+++ b/blogs/templates/blogs/register_page.html
@@ -2,8 +2,18 @@
 {% block content %}
     <div class="wrap">
         <div class="register-page">
-            <form action="">
-
+            <form action="" method="post">
+                {% csrf_token %}
+                <div class="username">
+                    <input type="text" name="username" value="">
+                </div>
+                <div class="email">
+                    <input type="email" name="email" value="">
+                </div>
+                <div class="password">
+                    <input type="password" name="password" value="">
+                    <input type="password" name="password_r" value="">
+                </div>
                 <div class="submit">
                     <button type="submit" class="btn-reg btn-blog">Зарегестрироваться</button>
                 </div>
