--- a/blogs/templates/blogs/blog_edit.html
+++ b/blogs/templates/blogs/blog_edit.html
@@ -1,10 +1,24 @@
 {% extends 'blogs/base.html' %}
 {% block content %}
 <div class="wrap">
+    <h2 class="sub-title">Edit Blog</h2>
     <form action="#" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Сохранить</button>
+        <div class="title-input">
+            <label for="{{ form.title.id_for_label }}">Заголовок поста</label>
+            <input type="text" name="title" id="{{ form.title.id_for_label }}" value="{{ form.title.value }}">
+        </div>
+        <div class="description">
+            <label for="{{ form.text.id_for_label }}">Описание поста</label>
+            <textarea name="text" id="{{ form.text.id_for_label }}">{{ form.text.value }}</textarea>
+        </div>
+        <div class="download-image">
+            <label for="{{ form.image.id_for_label }}"><span>Выберите изображение</span></label>
+            <input type="file" name="image" id="{{ form.image.id_for_label }}">
+        </div>
+        <div class="submit">
+            <button type="submit">Сохранить</button>
+        </div>
     </form>
 </div>
 {% endblock content %}
