--- a/blogs/templates/blogs/blog_add.html
+++ b/blogs/templates/blogs/blog_add.html
@@ -2,10 +2,25 @@
 {% block content %}
     {% if request.user.is_authenticated %}
     <div class="wrap">
+        <h2 class="sub-title">Add Blog</h2>
         <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn">Send</button>
+           {% comment %} {{ form.as_p }}{% endcomment %}
+            <div class="title-input">
+                <label for="{{ form.title.id_for_label }}">Заголовок поста</label>
+                <input type="text" name="title" id="{{ form.title.id_for_label }}" value="">
+            </div>
+            <div class="description">
+                <label for="{{ form.text.id_for_label }}">Описание поста</label>
+                <textarea name="text" id="{{ form.text.id_for_label }}"></textarea>
+            </div>
+            <div class="download-image">
+                <label for="{{ form.image.id_for_label }}"><span>Выберите изображение</span></label>
+                <input type="file" name="image" id="{{ form.image.id_for_label }}">
+            </div>
+            <div class="submit">
+                <button type="submit" class="btn">Опубликовать</button>
+            </div>
         </form>
     </div>
         {% else %}
