--- a/blogs/templates/blogs/register_page.html
+++ b/blogs/templates/blogs/register_page.html
@@ -2,17 +2,22 @@
 {% block content %}
     <div class="wrap">
         <div class="register-page">
+            <h2 class="sub-title">Регистрация</h2>
             <form action="" method="post">
                 {% csrf_token %}
                 <div class="username">
-                    <input type="text" name="username" value="">
+                    <label for="id_login">Введите логин</label>
+                    <input type="text" name="username" id="id_login" value="">
                 </div>
                 <div class="email">
-                    <input type="email" name="email" value="">
+                    <label for="id_email">Введите эмейл</label>
+                    <input type="email" name="email" id="id_email" value="">
                 </div>
                 <div class="password">
-                    <input type="password" name="password" value="">
-                    <input type="password" name="password_r" value="">
+                    <label for="id_password">Введите пароль</label>
+                    <input type="password" name="password" id="id_password" value="">
+                    <label for="id_password_r">Повторите пароль</label>
+                    <input type="password" name="password_r" id="id_password_r" value="">
                 </div>
                 <div class="submit">
                     <button type="submit" class="btn-reg btn-blog">Зарегестрироваться</button>
