added options for posts('status'), admin_page for posts and user_page

--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -30,8 +30,11 @@
                     <li><a href="{% url 'login' %}">Войти</a></li>
                 {% endif %}
                 {% if request.user.is_authenticated %}
-                    <li><a href="#">Добро пожаловать {{ request.user }}</a></li>
+                    <li><a href="{% url 'user_page' pk=user.pk%}">Добро пожаловать {{ request.user }}</a></li>
                     <li><a href="{% url 'logout' %}">Выйти</a></li>
+                {% endif %}
+                {% if request.user.is_superuser %}
+                    <li><a href="{% url 'admin_account' %}">Админка</a></li>
                 {% endif %}
             </ul>
         </div>
