--- a/blogs/templates/blogs/inner_blog.html
+++ b/blogs/templates/blogs/inner_blog.html
@@ -13,6 +13,9 @@
           {% endif %}
         <p>{{ post.text }}</p>
       </div>
+        <div class="status">
+                {{ post.status }}
+        </div>
     </div>
     <h3 class="title-com">Комментарии:</h3>
       <div class="block-comments">
