--- a/blogs/templates/blogs/register_page.html
+++ b/blogs/templates/blogs/register_page.html
@@ -5,20 +5,7 @@
             <h2 class="sub-title">Регистрация</h2>
             <form action="" method="post">
                 {% csrf_token %}
-                <div class="username">
-                    <label for="id_login">Введите логин</label>
-                    <input type="text" name="username" id="id_login" value="">
-                </div>
-                <div class="email">
-                    <label for="id_email">Введите эмейл</label>
-                    <input type="email" name="email" id="id_email" value="">
-                </div>
-                <div class="password">
-                    <label for="id_password">Введите пароль</label>
-                    <input type="password" name="password" id="id_password" value="">
-                    <label for="id_password_r">Повторите пароль</label>
-                    <input type="password" name="password_r" id="id_password_r" value="">
-                </div>
+                {{ form.as_p }}
                 <div class="submit">
                     <button type="submit" class="btn-reg btn-blog">Зарегестрироваться</button>
                 </div>
