--- a/blogs/templates/blogs/admin_account.html
+++ b/blogs/templates/blogs/admin_account.html
@@ -1,6 +1,7 @@
 {% extends 'blogs/base.html' %}
 {% block content %}
-    <div class="wrap">
+<h2 class="sub-title">Подтверждение постов</h2>
+<div class="wrap">
     <div class="publish-blog">
         {% for post in posts %}
             <div class="blog-item">
@@ -27,5 +28,5 @@
             </div>
         {% endfor %}
     </div>
-    </div>
+</div>
 {% endblock content %}
